# cpp_cmake_travisci_barebones

./: .travis.yml  CMakeLists.txt  README.md
include/: public_api.h
src/: main.cpp  private_api.cpp  private_api.h  public_api.cpp
